--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.8",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "angular-ui-swiper": "^2.3.8",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
     "ng-image-slider": "^7.0.1",
     "ng-mat-carousel": "^0.11.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "swiper": "^6.8.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
